# usd-s3-resolver

./: CMakeLists.txt  README.md
S3Resolver/: CMakeLists.txt  README.md  debugCodes.cpp  debugCodes.h  plugInfo.json  resolver.cpp  resolver.h  s3.cpp  s3.h
cmake/: FindUSD.cmake
test/: test_s3.py
